[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/player.gd" type="Script" id=1]
[ext_resource path="res://UI/crosshair.png" type="Texture" id=2]

[sub_resource type="CapsuleShape" id=1]
height = 1.76821

[sub_resource type="PrismMesh" id=2]

[sub_resource type="CapsuleShape" id=3]
radius = 1.32156
height = 2.72801

[node name="player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2, -0.143786 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.887, 0 )
current = true

[node name="interact" type="RayCast" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.059, -0.033, -1 )
enabled = true
cast_to = Vector3( 0, 0, -5 )
collide_with_areas = true
collide_with_bodies = false

[node name="SpotLight" type="SpotLight" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.631317, 0.211347 )
light_energy = 3.0
spot_range = 21.536
spot_angle = 33.1268

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.5
margin_top = -13.0
margin_right = 18.5
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
texture = ExtResource( 2 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.262414, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="flashlight_battery" type="Timer" parent="."]
autostart = true

[node name="grab_hitbox" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="grab_hitbox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.0122439, 1.55994, -0.0965819 )
shape = SubResource( 3 )

[node name="sanity_time" type="Timer" parent="."]
wait_time = 0.1

[node name="heartbeat_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="flashlight_battery" to="." method="_on_flashlight_battery_timeout"]
[connection signal="body_entered" from="grab_hitbox" to="." method="_on_grab_hitbox_body_entered"]
[connection signal="timeout" from="sanity_time" to="." method="_on_sanity_time_timeout"]
[connection signal="timeout" from="heartbeat_timer" to="." method="_on_heartbeat_timer_timeout"]
